infrastructure/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-test-generator
  labels:
    app: api-test-generator
spec:
  type: LoadBalancer
  selector:
    app: api-test-generator
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  sessionAffinity: None
